Fixed mobile issue with content overflowing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -50,6 +50,7 @@
 #projects {
   text-align: center;
   background-color:  #0099cc;
+  overflow: auto;
 }
 #projects a{
   color: white;
